--- a/src/os2datascanner/projects/report/default-settings.toml
+++ b/src/os2datascanner/projects/report/default-settings.toml
@@ -42,6 +42,9 @@ SMB_ALLOW_WRITE = false
 SITE_URL = "*"
 ALLOWED_HOSTS = []
 SESSION_COOKIE_NAME = "sessionid"
+# Default value - required to be set properly in production.
+# https://docs.djangoproject.com/en/4.2/ref/settings/#csrf-trusted-origins
+CSRF_TRUSTED_ORIGINS = []
 
 # Client info from keycloak
 OIDC_RP_CLIENT_ID = ""
